--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,58 @@
+### JetBrains template
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
+*.iml
+.idea/
+
+## Directory-based project format:
+
+# if you remove the above rule, at least ignore the following:
+
+# User-specific stuff:
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dictionaries
+
+#Sensitive or high-churn files:
+.idea/dataSources.ids
+.idea/dataSources.xml
+.idea/sqlDataSources.xml
+.idea/dynamic.xml
+.idea/uiDesigner.xml
+
+# Gradle:
+ .idea/gradle.xml
+ .idea/libraries
+
+# Mongo Explorer plugin:
+ .idea/mongoSettings.xml
+
+## File-based project format:
+*.ipr
+*.iws
+
+## Plugin-specific files:
+
+# IntelliJ
+/out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+### Composer template
+composer.phar
+vendor/
+
+# Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
+# You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
+# composer.lock
+
 # Created by .ignore support plugin (hsz.mobi)
 ### SublimeText template
 # cache files for sublime text
@@ -18,8 +73,6 @@ sftp-config.json
 ### Example user template
 
 # IntelliJ project files
-.idea
-*.iml
 out
 gen### NetBeans template
 nbproject/private/
@@ -33,9 +86,6 @@ nb-configuration.xml
 ### NotepadPP template
 # Notepad++ backups #
 *.bak
-### Composer template
-composer.phar
-vendor/
 
 # Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
