--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     }
   ],
   "require-dev": {
-    "phpunit/phpunit": "~5.1"
+    "phpunit/phpunit": "~5.1",
+    "squizlabs/php_codesniffer": "~2.5.0"
   },
   "require": {
     "cboden/ratchet": "0.3.4"
