--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-  "name": "libster/chat",
-  "description": "php components for messenger and chat system",
-  "minimum-stability": "stable",
+  "name": "libster/domains",
+  "description": "php components for simple web system",
+  "minimum-stability": "dev",
   "license": "proprietary",
   "authors": [
     {
@@ -10,8 +10,9 @@
     }
   ],
   "require-dev": {
-    "phpunit/phpunit": "~5.1",
-    "squizlabs/php_codesniffer": "~2.5.0"
+    "phpunit/phpunit": "~4.8 || ~5.0",
+    "squizlabs/php_codesniffer": "~2.3",
+    "phpmd/phpmd": "~2.3"
   },
   "require": {
     "cboden/ratchet": "0.3.4"
